[FIX][UI] Add white space above and below comment container, removing side padding (themes can add it if wanted).

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -1766,8 +1766,7 @@ body.tiki_forums .normal {
 
 #comment-container {
   display: none;
-  margin: 0;
-  padding: 0 15px; }
+  margin: 15px 0; }
 
 #comment-container-below {
   display: none; }
