--- a/themes/base_files/scss/_tiki-comments.scss
+++ b/themes/base_files/scss/_tiki-comments.scss
@@ -3,8 +3,7 @@
 
 #comment-container {
 	display: none;
-	margin: 0;
-	padding: 0 15px;
+	margin: 15px 0;
 }
 
 #comment-container-below {
